2004-07-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* SConstruct: Updates.  Add targets: tar, dist, release.

2004-07-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/mutopia-header.ly: Generate output.

	* SConstruct:
	* buildscripts/builder.py:
	* Documentation/user/SConscript: SCons fixes.

2004-07-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/new-slur.cc (class New_slur): new file. Score based slur
	computations.

2004-07-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/SConscript: Remove Builders.

	* buildscripts/builder.py: Add LilyPond, Abc2ly and MF builders.

	* input/SConscript: 
	* Documentation/user/SConscript: New file.

2004-07-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.texi (Top): add note about new
	emacs electric-|

	* scm/*.scm: adapt ly:warn calls.

	* lily/lily-guile.cc (LY_DEFINE): use format on ly:warn arguments.

	* lily/repeat-acknowledge-engraver.cc (process_music): look at
	main timing, not grace timing. Fixes volta-repeat-grace.

	* lily/kpath.cc (LY_DEFINE): ly:kpathsea-expand-path, new function
	remove ly:kpathsea-gulp-file.

	* scm/translation-functions.scm (format-metronome-markup): make
	note smaller, align to bottom.

	* scm/define-grobs.scm (all-grob-descriptions): metronome fixes.

	* lily/metronome-engraver.cc (stop_translation_timestep): attach
	metronome to musical column. Don't ack time sigs or bar lines.

2004-07-10  Heikki Junes  <hjunes@cc.hut.fi>

	* THANKS: sort, add David. Kristof contributed code, he is a
	contributor.

2004-07-09  David Svoboda      <svoboda@cmu.edu>

	* elisp/lilypond-mode.el,
	* elisp/lilypond-what-beat.el: Added LilyPond-what-beat function to
	count beats between last measure stop | and point in emacs.
	
2004-07-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* tex/GNUmakefile (TEX_FILES): don't dist
	music-drawing-routines.ps, latin1.enc 

	* scripts/lilypond.py (include_path): remove --no-lily, --no-ps ,
	--no-pdf, --pdftex
	(copyright): add --latex option