@@ -32,8 +32,9 @@ ink.  An image was formed by pressing paper to the plate.  The
 stamping and cutting was completely done by hand.  Making a correction
 was cumbersome, if possible at all, so the engraving had to be perfect
 in one go.  Engraving was a highly specialized skill, a craftsman had
-to complete around ten years of practical training before he could be
-a master engraver.
+to complete around five years of training before he could
+be a master engraver, and another five years of experience were
+necessary to become truly skilled.
 
 Nowadays, all newly printed music is produced with computers.  This
 has obvious advantages; prints are cheaper to make, editorial work can
